# wrappers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: circuit.hpp  gkr.hpp  multilinear.hpp  sumcheck.hpp  sumcheck_bilinear.cpp  sumcheck_multilinear.h  sumcheck_multilinear.hpp  wrappers.cpp
tests/: test_gkr_dense.cpp  test_sumcheck_multilinear.cpp
